--- a/src/component/Login/Login.module.css
+++ b/src/component/Login/Login.module.css
@@ -1,20 +1,24 @@
-.logo-wrapper
+
+#logo-wrapper
 {
-  background: green;
+  display: none !important;
 }
 form
 {
+  display: none;
+  text-align: center;
   position: sticky;
-  display: flex;
+  display: flex !important;
   background-color: rgb(68, 230, 191);
   justify-content: space-around;
   align-items: center;
   flex-direction : column;
-  height: 200px;
+  min-height: 200px;
   width : 300px;
   /* border : 3px solid red; */
   border-radius: 4px;
-  left: 40%;
+  /* left: 40%; */
+  margin: 0 auto;
   margin-top : 100px;
 }
 .username
